--- a/templates/authemail/local-dev/password_reset_email.html
+++ b/templates/authemail/local-dev/password_reset_email.html
@@ -7,7 +7,7 @@
 <body>
 <p>
 Reset your password by clicking on this link:<br>
-<a href="https://predigtflix.de/reset-password/?code={{ code }}">https://predigtflix.de/reset-password?code={{ code }}</a>
+<a href="http://127.0.0.1:4200/reset-password/?code={{ code }}">http://127.0.0.1:4200/reset-password?code={{ code }}</a>
 <br>(override version)
 </p>
 </body>
