--- a/templates/authemail/signup_email.html
+++ b/templates/authemail/signup_email.html
@@ -7,7 +7,7 @@
 <body>
 <p>
 Verify your email address by clicking on this link:<br>
-<a href="http://127.0.0.1:4200/confirm-email?code={{ code }}">http://127.0.0.1:4200/confirm-email?code={{ code }}</a>
+<a href="https://predigtflix.de/confirm-email?code={{ code }}">https://predigtflix.de/confirm-email?code={{ code }}</a>
 <br>(override version)
 </p>
 </body>
